syntax = "proto3";
package development;

service Development{
  rpc Echo(EchoRequest) returns (EchoReply) {};
  rpc DeployComponent(DeployRequest) returns (DeployReply) {};
  rpc StopServer(Empty) returns (Empty);
}

message Empty {}


message DeployRequest {
  string component_path = 1;
}

message DeployReply {
  string message = 1;
}

message EchoRequest {
  string message = 1;
}

message EchoReply {
  string message = 1;
}
